adds monthly total cost  calculations

--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
     <div>
         <h2>Employees</h2>
         <table class="table">
-            <thead>
+            <thead class="tableHeadings">
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>ID</th>
                 <th>Title</th>
-                <th>Annual Salary</th>
+                <th id="salary">Annual Salary</th>
                 <th></th>
             </thead>
             <tbody class="tableBody">
@@ -44,7 +44,7 @@
     </div>
 
     <div>
-        <h2>Total Monthly: $<span>$$$$</span></h2>
+        <h2>Total Monthly: <span id="monthlyTotalCostSpan"></span></h2>
     </div>
 </body>
 </html>
