adds round total to two decimal and red alert background color

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <div>
-        <h2>Total Monthly: <span id="monthlyTotalCostSpan"></span></h2>
+        <h2 class="redAlert">Total Monthly: <span id="monthlyTotalCostSpan"></span></h2>
     </div>
 </body>
 </html>
