adds bootstrap styling

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header>
+    <header class="jumbotron">
         <h1>Salary Calculator</h1>
     </header>
     <div>
@@ -21,15 +21,15 @@
         <input type="text" placeholder="Last Name" id="lastNameInputField">
         <input type="text" placeholder="ID" id="idInputField">
         <input type="text" placeholder="Title" id="titleInputField">
-        <input type="text" placeholder="Annual Salary" id="annualSalaryInputField"> <br>
+        <input type="text" placeholder="Annual Salary" id="annualSalaryInputField">
 
-        <button class="submitButton">Submit</button>
+        <button class="submitButton btn btn-success">Submit</button>
     </div>
 
     <div>
         <h2>Employees</h2>
-        <table class="table">
-            <thead class="tableHeadings">
+        <table class="table table-striped table-bordered">
+            <thead class="tableHeadings thead-dark">
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>ID</th>
